# Projeto_API

./: README.md  main.py  pyproject.toml  testes.py
.github/workflows/: main.yml
src/: data.py  main.py  schema.py
test/: testes.py
