[project]
name = "projeto_api"
version = "0.1.0"
description = ""
authors = [
    {name = "none"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.14,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "ruff (>=0.12.1,<0.13.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

[tool.taskipy.tasks]
run = "uvicorn src.main:app --reload"
test = "python -m pytest -v test/testes.py"
kill = "kill -9 $(lsof -t -i:8000)"